# tiny-paywall2

./: .gitignore  CLAUDE.md  README.md  SPEC.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  config.py  main.py  pyproject.toml
backend/auth/: deps.py  rate_limit.py  security.py
backend/db/: connection.py
backend/money/: operations.py
backend/routes/: articles.py  auth.py  hello.py  payouts.py  purchases.py  stripe_webhook.py  votes.py  wallet.py
backend/tests/: conftest.py  helpers.py  test_articles.py  test_auth.py  test_hello.py  test_money.py  test_payouts.py  test_purchases.py  test_stripe_webhook.py  test_votes.py  test_wallet.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  format.js  index.css
frontend/src/api/: articles-api.js  auth-api.js  hello-api.js  payouts-api.js  purchases-api.js  request.js  votes-api.js  wallet-api.js
frontend/src/components/: NavBar.jsx
frontend/src/pages/: AccountPage.jsx  AdminPage.jsx  ArticleEditor.jsx  ArticleList.jsx  ArticleView.jsx  AuthPage.jsx  MyArticles.jsx
